# ci-with-spotify

./: README.md  pyproject.toml
.github/workflows/: python_app.yaml
notebooks/: spotify_eda.py
