[project]
name = "ci-with-spotify"
version = "0.1.0"
description = "Spotify EDA with Polars & GitHub Actions CI/CD pipeline. Demonstrates modern Python development practices including automated testing, linting, type checking, and continuous integration."
readme = "README.md"
authors = [
    {name = "Krisztian Kerenyi", email = "krisztian.kerenyi@example.com"}
]
license = {text = "MIT"}
keywords = ["spotify", "data-analysis", "polars", "eda", "ci-cd", "github-actions"]
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.3.0",
    "numpy>=2.3.4",
    "plotly[express]>=6.4.0",
    "polars>=1.35.2",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "marimo>=0.17.8",
    "pytest>=9.0.1",
]
